# olveczky-lab-to-nwb

./: .gitignore  conversion_notes.md  pyproject.toml
src/olveczky_lab_to_nwb/klibaite_2025_rat/: __init__.py  convert_all_sessions.py  convert_session.py  general_metadata.yaml  nwbconverter.py
src/olveczky_lab_to_nwb/klibaite_2025_rat/documentation/: conversion_notes.md  inspect_data.py  project_track.md
src/olveczky_lab_to_nwb/klibaite_2025_rat/interfaces/: __init__.py  skin_contacts_interface.py  video_interface.py
src/olveczky_lab_to_nwb/klibaite_2025_rat/utils/: constants.py
src/olveczky_lab_to_nwb/social_behavior/: __init__.py  social_behavior_convert_all_sessions.py  social_behavior_convert_session.py  social_behavior_metadata.yaml  subject_metadata.py
src/olveczky_lab_to_nwb/social_behavior/interfaces/: __init__.py  sdannce_interface.py  skin_contacts_interface.py  video_interface.py
