[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olveczky-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Olveczky Lab"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pynwb",
    "nwbinspector",
]

[project.urls]
Repository = "https://github.com/catalystneuro/olveczky-lab-to-nwb"

[project.optional-dependencies]
social_behavior = [
    # Install neuroconv from branch until DANNCE interface is merged:
    # pip install "git+https://github.com/catalystneuro/neuroconv.git@add-dannce-interface"
    "neuroconv",
    "ndx-pose>=0.2.0",
    "scipy",
    "h5py",
    "numpy",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/olveczky_lab_to_nwb"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
